Dashboard to all pages

--- a/application.json
+++ b/application.json
@@ -32,6 +32,10 @@
     {
       "id": "Dashboard",
       "isDefault": true
+    },
+    {
+      "id": "community",
+      "isDefault": false
     }
   ],
   "unpublishedAppLayout": {
